[package]
name = "organize_file"
version = "0.1.0"
edition = "2021"
authors = ["abdul.azizi@stud.th-deg.de"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
walkdir = "2.3"
[[bin]]
name = "organize"  # This will make the binary name "organize"
path = "src/main.rs"
[target.x86_64-apple-darwin]
linker = "o64-clang"
ar = "x86_64-apple-darwin21.1-ar"


[target.aarch64-apple-darwin]
linker = "aarch64-apple-darwin21.1-clang"
ar = "aarch64-apple-darwin21.1-ar"



